GNOME Bugzilla – Bug 599962
user switch applet not honoring disable_lock_screen
Last modified: 2010-04-21 20:20:28 UTC
user switch applet not honoring disable_lock_screen. We shouldn't show the option in the menu.
Created attachment 146465 [details] [review] patch
Isn't this fixed in master?
Yup: commit 8b03661e8fe3cb7ad2785c935fd0920f44d32138 Author: William Jon McCann <jmccann@redhat.com> Date: Wed Oct 28 19:18:50 2009 -0400 Don't show lock screen option if locked down Also fix up some other silliness Fixes https://bugzilla.gnome.org/show_bug.cgi?id=599962