Don't show lock screen option if locked down

Also fix up some other silliness
Fixes https://bugzilla.gnome.org/show_bug.cgi?id=599962